Improved routing & commented all files.
Routing now fully works with apache2 servers, (Read .htaccess in the
root folder).

All major files commented.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 	<title>Taskwipe</title><!-- Bootstrap -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
+    
+    <base href="/">
 </head>
 
 <body>
